# Mini-Operating-System-Simulator

./: .gitignore  CMakeLists.txt  LEARNING.md  README.md  package-lock.json
build_backend/: sources.rsp
build_full/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  compile_commands.json
build_msvc_cmd/: CMakeCache.txt
build_nomanifest/: CMakeCache.txt
build_vs/: CMakeCache.txt
include/common/: display.h  logger.h  types.h
include/deadlock/: bankers.h  resource_graph.h
include/filesystem/: directory.h  fat.h  file_ops.h  virtual_disk.h
include/memory/: memory_block.h  memory_manager.h
include/process/: process_manager.h
include/scheduler/: fcfs.h  mlfq.h  priority.h  round_robin.h  scheduler.h  sjf.h
include/sync/: dining_philosophers.h  monitor_sim.h  mutex_sim.h  producer_consumer.h  readers_writers.h  semaphore_sim.h  sleeping_barber.h
include/vmem/: page_replacement.h  page_table.h
src/: main.cpp
src/deadlock/: deadlock_analyzer.cpp
src/filesystem/: filesystem_sim.cpp
src/memory/: memory_sim.cpp
src/process/: process_simulator.cpp
src/scheduler/: scheduler_lab.cpp
src/sync/: sync_playground.cpp
src/vmem/: vmem_sim.cpp
web/: package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/deadlock/: page.tsx
web/src/app/filesystem/: page.tsx
web/src/app/memory/: page.tsx
web/src/components/: ModuleHeader.tsx  Sidebar.tsx
web/src/lib/: deadlock.ts  filesystem.ts  fs-io-cost.ts  memory.ts  process.ts  scheduler.ts  sync.ts  types.ts  vmem.ts
(+4 files in other folders)
